user auth and fix authorization header
