# navigation/lib.rs
@@ -1,8 +1,9 @@
-use axum::http::header::CONTENT_TYPE;
+use axum::http::header::{AUTHORIZATION, CONTENT_TYPE};
 use std::env;
 use std::error::Error;
 
 use axum::http::Method;
+use axum::routing::get;
 use bb8_postgres::bb8::{ManageConnection, Pool};
 use bb8_postgres::PostgresConnectionManager;
 use dotenvy::dotenv;
@@ -10,19 +11,22 @@ use tokio_postgres::NoTls;
 use tower_http::cors::{Any, CorsLayer};
 
 use crate::app_state::AppState;
-use crate::controllers::route_controllers;
+use crate::controllers::{openapi_spec, route_controllers};
 
 mod app_state;
 pub mod controllers;
 mod extractors;
 mod implementations;
+mod jwt;
 mod openapi;
+
 pub async fn main() -> Result<(), Box<dyn Error>> {
   dotenv().ok();
   dotenvy::from_path_override(".local/.env").ok();
   let database_url = env::var("DATABASE_URL").map_err(|_| "DATABASE_URL must be set")?;
   //let server_url = env::var("SERVER_URL").expect("SERVER_URL must be set");
   let content_path = env::var("CONTENT_PATH").map_err(|_| "CONTENT_PATH must be set")?;
+  let api_url = env::var("API_URL").map_err(|_| "API_URL must be set")?;
   let content_display_path = env::var("CONTENT_DISPLAY_PATH").map_err(|_| "CONTENT_DISPLAY_PATH must be set")?;
   let secret = env::var("SECRET").map_err(|_| "SECRET must be set")?;
 
@@ -30,7 +34,7 @@ pub async fn main() -> Result<(), Box<dyn Error>> {
 
   let cors = CorsLayer::new()
     .allow_methods([Method::GET, Method::POST, Method::PATCH, Method::DELETE])
-    .allow_headers([CONTENT_TYPE])
+    .allow_headers([CONTENT_TYPE,AUTHORIZATION])
     .allow_origin(Any);
 
   let app_state = AppState {
@@ -39,8 +43,9 @@ pub async fn main() -> Result<(), Box<dyn Error>> {
     content_path,
     secret,
   };
-
+  let doc = openapi_spec(&api_url);
   let app = route_controllers(app_state).layer(cors);
+  let app = app.route("/", get(|| async { axum::Json(doc) }));
 
   let listener = tokio::net::TcpListener::bind("0.0.0.0:3000").await?;
   println!("Server listening on port 3000!");
